WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232979
[LFC][IFC] Do not set prior context on the line-break iterator when when crossing layout box boundary
https://bugs.webkit.org/show_bug.cgi?id=232979
Summary
[LFC][IFC] Do not set prior context on the line-break iterator when when cros...
alan
Reported
2021-11-10 19:08:48 PST
ssia
Attachments
Patch
(2.65 KB, patch)
2021-11-10 19:22 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-11-10 19:22:26 PST
Created
attachment 443896
[details]
Patch
EWS
Comment 2
2021-11-11 06:57:30 PST
Committed
r285629
(
244130@main
): <
https://commits.webkit.org/244130@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443896
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-11-11 06:58:19 PST
<
rdar://problem/85297862
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug