[LFC][IFC] Do not set prior context on the line-break iterator when when crossing layout box boundary https://bugs.webkit.org/show_bug.cgi?id=232979

Reviewed by Antti Koivisto.

This is the case when the bidi boundary may also be a valid soft wrap opportunity. We normally set
a "prior context" before calling into the nextBreakablePosition to eliminate the need for constructing
continuous text content by extracting strings from different layout boxes. However in the bidi boundary case, we know
that the text content belongs to only one layout box.

* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::endsWithSoftWrapOpportunity): This will eventually be replaced with the "breaking reason flag" optimization i.e. bidi boundary vs. soft wrap opportunity.



Canonical link: https://commits.webkit.org/244130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285629 268f45cc-cd09-0410-ab3c-d52691b4dbfc